// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="received-vesting-content"
>
  <div
    className="user-list"
  >
    <div
      className="list-body"
    >
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user2"
            onClick={[Function]}
            size="small"
            username="user2"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@user2"
              onClick={[Function]}
            >
              user2
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="191778.000000 VESTS"
          >
            98.527 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user3"
            onClick={[Function]}
            size="small"
            username="user3"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@user3"
              onClick={[Function]}
            >
              user3
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="29326.000000 VESTS"
          >
            15.066 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user4"
            onClick={[Function]}
            size="small"
            username="user4"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@user4"
              onClick={[Function]}
            >
              user4
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="27751.000000 VESTS"
          >
            14.257 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user1"
            onClick={[Function]}
            size="small"
            username="user1"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@user1"
              onClick={[Function]}
            >
              user1
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="14848.000000 VESTS"
          >
            7.628 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user5"
            onClick={[Function]}
            size="small"
            username="user5"
          />
          <div
            className="item-info"
          >
            <a
              className="item-name notransalte"
              href="/@user5"
              onClick={[Function]}
            >
              user5
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="1957.888055 VESTS"
          >
            1.006 HP
          </span>
        </div>
      </div>
    </div>
    <ul
      className="mt-4 pagination"
    >
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
          <span
            className="sr-only"
          >
            First
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ‹
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </span>
      </li>
      <li
        className="page-item active"
      >
        <span
          className="page-link"
          disabled={false}
          onClick={[Function]}
        >
          1
          <span
            className="sr-only"
          >
            (current)
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ›
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
          <span
            className="sr-only"
          >
            Last
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`(2) Empty list 1`] = `
<div
  className="received-vesting-content"
>
  <div
    className="user-list"
  >
    <div
      className="list-body"
    >
      <div
        className="empty-list"
      >
        Nothing here
      </div>
    </div>
    <ul
      className="mt-4 pagination"
    >
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
          <span
            className="sr-only"
          >
            First
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ‹
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ›
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
          <span
            className="sr-only"
          >
            Last
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;
